fixed cookie z-index issue on footer and spacing after return
Former-commit-id: 50dddf70947dbaea3362c63fa9a484b1d97a3075

--- a/client/app/components/CookieConsentBar/CookieConsentBar.scss
+++ b/client/app/components/CookieConsentBar/CookieConsentBar.scss
@@ -19,7 +19,7 @@
     transition: all 0.5s ease;
     &.hidden {
       opacity: 0;
-      z-index: 1;
+      z-index: -1;
     }
   }
   .btn_cookie {
